tests/paczka1/fuzzy1/20469325.err
Error in line 4: Sg1Rdxu9GGk A287 37,2
Error in line 5: gSW A612 31,1
Error in line 8: A287 A287 34,7
Error in line 30: Sg1Rdxu9GGk A612 9,1
Error in line 34: FHY8 A612 49,15
Error in line 29: FHY8 S312 43,0
